# GamePlay

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  codestyle.xml
api/: header.html
gameplay/: .project  CMakeLists.txt
gameplay/res/shaders/: colored.frag  sprite.frag  terrain.frag  textured.frag
gameplay/src/: Base.h  Bundle.cpp  ImageControl.cpp  PlatformLinux.cpp  PlatformLinuxGles2Kms.cpp  PlatformWindows.cpp  VertexAttributeBinding.cpp  gameplay-main-linuxglesv2kms.cpp
samples/: CMakeLists.txt
samples/browser/: .project  CMakeLists.txt  bar-descriptor.xml  sample-browser.vcxproj.filters
samples/browser/android/: build.xml
samples/browser/android/jni/: Android.mk
samples/character/: .project  bar-descriptor.xml
samples/lua/: bar-descriptor.xml
samples/mesh/: bar-descriptor.xml
samples/particles/: bar-descriptor.xml
samples/particles/res/: editor.form  editor.theme
samples/particles/src/: ParticlesGame.cpp  ParticlesGame.h
samples/racer/: bar-descriptor.xml  sample-racer.vcxproj.filters
samples/racer/res/common/: menu.theme
samples/racer/res/design/.mayaSwatches/: car.png.swatch  panel_16.png.swatch
samples/racer/src/: RacerGame.cpp
samples/spaceship/: bar-descriptor.xml
samples/spaceship/res/: challenge.form  menu.form  menu.theme
template/: template.bar-descriptor.xml
tools/encoder/src/: EncoderArguments.cpp  EncoderArguments.h  GPBFile.h  TTFFontEncoder.cpp  TTFFontEncoder.h  main.cpp
